# pencraft

./: .editorconfig  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  reproduce_trends.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  publish.yml
examples/: advanced_usage.py  config.example.yaml  generate_ai_blogs.py  simple_blog.py
src/openblog/: __init__.py  cli.py  generator.py
src/openblog/agents/: __init__.py  base.py  planner.py  research.py  writer.py
src/openblog/config/: __init__.py  defaults.py  settings.py
src/openblog/formatters/: __init__.py  citations.py  frontmatter.py  markdown.py
src/openblog/llm/: __init__.py  client.py  prompts.py
src/openblog/tools/: __init__.py  scraper.py  search.py  trends.py
src/openblog/utils/: __init__.py  logging.py
src/pencraft/: enhancer.py
tests/: conftest.py
tests/unit/: test_formatters.py  test_settings.py
